<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="bottom|center_horizontal"
		android:paddingTop="10dp"
		android:textSize="20sp"
		android:text="@string/timeFrameLabel" />

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="bottom|center_horizontal"
		android:textSize="12sp"
		android:text="@string/timeFrameHint" />

	<TextView
		android:id="@+id/currentRules"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal"
		android:layout_gravity="center_horizontal"
		android:paddingTop="10dp"
		android:paddingBottom="10dp"
		android:paddingLeft="30dp"
		android:paddingRight="30dp"
		android:text="@string/timeFrameSchedule"
		android:drawablePadding="5dp"
		android:drawableLeft="@drawable/schedule_24_7"
		android:drawableStart="@drawable/schedule_24_7" />

	<LinearLayout
		android:id="@+id/scheduleList"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical" />

	<Button
	    android:id="@+id/addDayTimeSchedule"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/addTimeSchedule" />

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="bottom"
		android:paddingTop="10dp"
		android:text="@string/enabledLabel" />

	<Switch
		android:id="@+id/enabled"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="5dp"
		android:layout_marginRight="10dp"
		android:layout_marginLeft="10dp"
		android:text="@string/enabled" />

</LinearLayout>
