<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="bottom|center_horizontal"
		android:paddingTop="10dp"
		android:textSize="20sp"
		android:text="@string/nonAudibleAlertLabel" />

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="bottom"
		android:paddingTop="10dp"
		android:text="@string/vibrateLabel" />

	<Spinner
	    android:id="@+id/vibrate"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" />

	<LinearLayout
		android:id="@+id/flashSelection"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<TextView
		    android:id="@+id/flashLabel"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="bottom"
			android:paddingTop="10dp"
			android:text="@string/flashOnLabel" />

	    <RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="5dp">

		    <ImageView
				android:id="@+id/flashIcon"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_centerVertical="true"
				android:contentDescription="@string/icon" />

			<CheckBox
				android:id="@+id/turnFlashOn"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_toRightOf="@id/flashIcon"
				android:layout_marginLeft="10dp"
				android:paddingLeft="5dp"
				android:hint="@string/flashOn" />

		</RelativeLayout>

	</LinearLayout>

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="bottom"
		android:paddingTop="10dp"
		android:text="@string/turnScreenOnLabel" />

    <RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="5dp">

	    <ImageView
			android:id="@+id/screenIcon"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_centerVertical="true"
			android:contentDescription="@string/icon" />

		<CheckBox
			android:id="@+id/turnScreenOn"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_toRightOf="@id/screenIcon"
			android:layout_marginLeft="10dp"
			android:paddingLeft="5dp"
			android:hint="@string/turnScreenOn" />

	</RelativeLayout>

</LinearLayout>
