<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="bottom|center_horizontal"
		android:paddingTop="10dp"
		android:textSize="20sp"
		android:text="@string/ruleFilterLabel" />

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="bottom|center_horizontal"
		android:textSize="12sp"
		android:text="@string/ruleFilterHint" />

	<TextView
		android:id="@+id/currentFilters"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal"
		android:layout_gravity="center_horizontal"
		android:paddingTop="10dp"
		android:paddingBottom="10dp"
		android:paddingLeft="30dp"
		android:paddingRight="30dp"
		android:text="@string/ruleFilterEmpty" />

	<LinearLayout
	    android:id="@+id/ruleFilters"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical" />

<!-- 	<LinearLayout -->
<!-- 		android:layout_width="match_parent" -->
<!-- 		android:layout_height="wrap_content" -->
<!-- 		android:orientation="horizontal" -->
<!-- 		style="?android:attr/buttonBarStyle"> -->

		<Button
		    android:id="@+id/add_phone"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/add_phone" />

		<Button
		    android:id="@+id/add_email"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="0.5"
			android:visibility="gone"
			style="?android:attr/buttonBarButtonStyle"
			android:text="@string/add_email" />

<!-- 	</LinearLayout> -->

</LinearLayout>
