<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_marginLeft="5dp"
	android:layout_marginRight="5dp"
	android:layout_marginBottom="10dp"
	android:orientation="vertical">

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="bottom"
		android:paddingTop="10dp"
		android:text="@string/emailRuleTypeLabel" />

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="bottom"
		android:paddingTop="10dp"
		android:text="@string/emailLabel" />

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<EditText
			android:id="@+id/email_address"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/emailHint"
			android:layout_toLeftOf="@+id/select_contact"
			android:layout_alignParentLeft="true"
			android:inputType="textEmailAddress" />

		<ImageButton
			android:id="@+id/select_contact"
			android:layout_width="40dp"
			android:layout_height="40dp"
			android:layout_alignParentRight="true"
			android:contentDescription="@string/selectContactEmail"
			android:scaleType="fitXY"
			android:adjustViewBounds="true"
			android:src="@drawable/email" />

	</RelativeLayout>

</LinearLayout>
