<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:padding="3dip">

    <ImageView
		android:id="@+id/imageIcon"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:contentDescription="@string/icon"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
		android:visibility="gone" />

    <RelativeLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="5dp"
		android:layout_toRightOf="@+id/imageIcon">

		<TextView
		    android:text="@string/vibrate_off_label"
			android:padding="3dip"
			android:layout_marginTop="2dip"
			android:textSize="16sp"
			android:textStyle="bold"
			android:id="@+id/label"
			android:layout_marginLeft="5dip"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>

		<TextView
		    android:text="@string/vibrate_off_detail"
			android:padding="2dip"
			android:layout_marginLeft="5dip"
			android:id="@+id/description"
			android:layout_below="@+id/label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>

	</RelativeLayout>

</RelativeLayout>