<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:id="@+id/ruleListRow"
	android:padding="3dp">

	<TextView
		android:padding="3dp"
		android:textStyle="bold"
		android:id="@+id/ruleDetails"
		android:layout_marginLeft="5dp"
		android:layout_marginStart="5dp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"/>

	<TextView
		android:padding="2dp"
		android:layout_marginLeft="15dp"
		android:layout_marginStart="15dp"
		android:id="@+id/alertType"
		android:layout_below="@+id/ruleDetails"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"/>

	<TextView
		android:padding="2dp"
		android:layout_marginLeft="15dp"
		android:layout_marginStart="15dp"
		android:id="@+id/ringTone"
		android:layout_below="@+id/alertType"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"/>

	<TextView
		android:padding="2dip"
		android:layout_marginLeft="15dp"
		android:layout_marginStart="15dp"
		android:id="@+id/ruleSchedule"
		android:layout_below="@+id/ringTone"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"/>

	<LinearLayout
		android:layout_below="@+id/ruleSchedule"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="5dp"
		android:layout_marginLeft="5dp"
		android:layout_marginRight="5dp"
		android:layout_marginBottom="5dp"
		android:gravity="center_horizontal"
		android:orientation="horizontal">

		<RelativeLayout
			android:id="@+id/volumeLayout"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
		    android:layout_marginLeft="5dp"
		    android:layout_marginRight="5dp">

			<TextView
				android:padding="2dp"
				android:id="@+id/volume"
				android:text="@string/volumeLevel"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>

			<ProgressBar
			    android:id="@+id/volumeBar"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
			    style="?android:attr/progressBarStyleHorizontal"
			    android:layout_below="@id/volume"
		        android:layout_centerVertical="true"/>

		</RelativeLayout>

		<ImageView
		    android:id="@+id/scheduleImage"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:src="@drawable/schedule_24_7"
			android:contentDescription="@string/scheudle_24_7" />

		<ImageView
		    android:id="@+id/vibrate"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:contentDescription="@string/vibrateType" />

		<ImageView
		    android:id="@+id/turnScreenOn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:contentDescription="@string/screenWillTurnOn" />

		<ImageView
		    android:id="@+id/cameraFlashOn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:contentDescription="@string/flashLightOn" />

	</LinearLayout>

</RelativeLayout>